# coulomb-explosion

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
apps/: CMakeLists.txt  main.cpp
bench/: CMakeLists.txt  bench_batched_integrator.cpp  bench_explosion.cpp  bench_force.cpp  bench_force_batch.cpp  bench_precision_sweep.cpp
demo/: README.md  plot_demo.py  requirements.txt  run_demo.sh  sanity_check.py
docs/: README.md
docs/benchmarks/: 0001-force-kernel-baseline.json  0001-force-kernel-baseline.md  0002-explosion-dispersion.md  0003-batched-force-kernel.json  0003-batched-force-kernel.md  0004-precision-sweep.csv  0004-precision-sweep.md  0005-f32-throughput.csv  0005-f32-throughput.json  0005-f32-throughput.md  0006-batched-integrator.csv  0006-batched-integrator.md  0007-avx2-tuning.csv  0007-avx2-tuning.json  0007-avx2-tuning.md  0008-ch4-dataset-gen.md  README.md
docs/decisions/: 0001-build-and-layout.md  0002-units-and-mass-conversion.md  0003-rk45-and-asymptotic-termination.md  0004-precision-policy.md
docs/internals/: batched-force-kernel.md  batched-integrator.md
examples/: CMakeLists.txt  README.md  generate_dataset.cpp  requirements.txt  to_parquet.py  verify_subset.py
include/coulomb/: batched_force.hpp  batched_integrator.hpp  driver.hpp  integrator.hpp  molecule.hpp  sampler.hpp  system.hpp  types.hpp  units.hpp
python/: README.md
python/analysis/: plot_batched_integrator.py  plot_explosion.py  plot_precision.py  plot_steps_vs_rtol.py  requirements.txt
python/reference/: README.md  config.yaml  coulomb.py  requirements.txt
src/: CMakeLists.txt  driver.cpp  integrators.cpp  sampler.cpp  system.cpp
tests/: CMakeLists.txt  test_integrator.cpp  test_reference.cpp  test_sampler.cpp  test_system.cpp
tests/reference/: gen_reference_cases.py  reference_cases.json
